[project]
name = "nviro-fetch"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wian Spamer", email = "61464034+WSpamer@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pytest>=8.4.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
]
